Wrote function to get Human choice
This function prompts the user with a window to type either rock, paper, or scissors to make their choice

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Rock, Paper, Scissors</h1>
+    <h2>Let's play!</h2>
+
+    <p>Click the button to input rock, paper, or scissors</p>
+
+    <button onclick="getHumanChoice()">Try it</button>
+
+    <p id="demo"></p>
+
     <script src="js/rock-paper-scissors.js" type="text/javascript"></script>
 </body>
 </html>
