Wrote play game function
Wrote the logice for the playGame() function which calls upon playRound() 5 times. In my index.html I added a button which calls the playGame() function and the game results are displayed in the console.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Rock, Paper, Scissors</h1>
     <h2>Let's play!</h2>
 
-    <p>Click the button to input rock, paper, or scissors</p>
+    <p>Click the button to play 5 rounds of rock-paper-scissors</p>
 
-    <button onclick="getHumanChoice()">Try it</button>
+    <button onclick="playGame()">Play</button>
 
     <p id="demo"></p>
 
