--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
 
         <!--<button onclick="playGame()">Play</button>-->
 
-        <h1 id="score">0 - 0</h1>
+        <div id="scoreContainer">
+            <h1 id="humanScore">0</h1>
+            <h1>-</h1>
+            <h1 id="computerScore">0</h1>
+
+        </div>
 
         <div id="playersContainer">
 
             <div class="playerContainer">
-                <h2 class="play">ROCK</h2>
+                <h2 class="play" id="humanPlay"></h2>
                 <h3 class="player">Human</h3>
             </div>
 
             <div class="playerContainer">
-                <h2 class="play">PAPER</h2>
+                <h2 class="play" id="computerPlay"></h2>
                 <h3 class="player">Computer</h3>
             </div>
 
@@ -32,9 +37,9 @@
 
     <div id="buttonsContainer">
         
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button id="rockButton" onclick="playRound('ROCK', getComputerChoice())">Rock</button>
+        <button id="paperButton" onclick="playRound('PAPER', getComputerChoice())">Paper</button>
+        <button id="scissorsButton" onclick="playRound('SCISSORS', getComputerChoice())">Scissors</button>
         
     </div>
     </div>
